# honk

./: .gitignore  DEVELOPMENT.md  NOTES_SETUP_COMPLETE.md  PLAN.md  README.md  debug_introspect.py  demo_notes.py  main.py  noxfile.py  pyproject.toml  run_ci_tests.sh  run_test.sh  setup_notes_app.sh  test.md  test_fixed.py  test_notes_setup.py
.github/agents/: my-new-agent.agent.md  my-test-agent.agent.md  researcher.agent.md  test-agent.agent.md
.github/workflows/: ci-core.yml  ci-macos.yml  docs-guard.yml  release.yml  schema-validation.yml
docs/: CHANGELOG.md  DEVELOPMENT.md  PTY-WATCHDOG-STATUS.md  README.md  agent-tool-completion-report.md  agents.md  command-reference.md  notes-agent-integration-guide.md  notes-ai-organization-spec.md  notes-app-spec.md  notes-user-guide.md  spec-auth.md  spec.md  uv-quick-reference.md
docs/notes/: README.md
docs/plans/: agent-and-prompt-tooling-spec.md  agent-tooling-implementation-plan.md  main.md  research-agent-complete-spec.md  research-agent-refined-spec.md
docs/references/: azure-cli-auth.md  (+15 more)
examples/: batch-organize-notes.py  organize-all-notes.sh
schemas/: agent.v1.json  help.v1.json  introspect.v1.json  knowledge-base.v1.json  research-session.v1.json  research-strategy.v1.json  result.v1.json
tests/: test_agent_schema.py  test_auth.py  test_auth_azure.py  test_auth_doctor.py  test_auth_github.py  test_auth_integration.py  test_cli.py  test_completion.py  test_demo.py  test_doctor.py  test_help_json.py  test_introspect.py  test_introspect_completeness.py  test_no_color.py  test_pty_doctor.py  test_result.py
(+129 files in other folders)
